@@ -53,6 +53,10 @@ CVS code -
   nano_small_msg(), nano_disabled_msg()
 	- Added checks for disabled functions to see whether or not to
 	  declare them.
+  do_next_word()
+	- Update the previous line as well as the current one in case we
+	  have moved beyond COLS or back from COLS, patch submitted
+	  by Ryan Krebs.
 - search.c:
   do_replace_hilight()
 	- New function, displays the currently selected word as hilighted
